--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,1 @@
-<app-page-layout>
-  <div class="container my-3">
-
-    <app-progress-bar *ngIf="isLoading"></app-progress-bar>
-
-    <ng-container *ngIf="!isLoading">
-      <div class="text-center">
-        Let's start the project!
-      </div>
-    </ng-container>
-
-  </div>
-</app-page-layout>
+<app-video></app-video>
